# YSA

./: Actor.cpp  Actor.h  Bullet.cpp  Bullet.h  CMakeLists.txt  Codes.h  ColorBoss.h  Death.cpp  Death.h  Detector.cpp  Detector.h  Enemy.cpp  Enemy.h  Fairy.cpp  Fairy.h  First.cpp  Level.cpp  Level.h  Level1.cpp  Levels.h  Mover.cpp  Mover.h  Platform.h  README.md  SpeechBubble.cpp  SpeechBubble.h  You.cpp  You.h  config_rel.sh  config_sf.sh  utilities.cpp  utilities.h
Bullets/: CMakeLists.txt  ColorBullet.cpp  ColorBullet.h
Detectors/: BigEye.cpp  BigEye.h  Block.cpp  Block.h  CMakeLists.txt  Wall.cpp  Wall.h
Enemies/: CBullet.cpp  CBullet.h  CMakeLists.txt  CatBoss.cpp  CatBoss.h  CatBullet.cpp  CatBullet.h  CatLaser.cpp  CatLaser.h  CatRocket.cpp  CatRocket.h  Cloud.cpp  Cloud.h  CloudBoss.cpp  CloudBoss.h  CloudBoss1.cpp  CloudBoss2.cpp  ColorBoss.cpp  ColorBoss.h  Death.cpp  Death.h  DeathArea.cpp  DeathArea.h  Drone.cpp  Drone.h  Enemy.cpp  Enemy.h  Follower.cpp  Follower.h  LineDrone.cpp  LineDrone.h  PBullet.cpp  PBullet.h  PBullet2.cpp  PBullet2.h  PGhost.cpp  PGhost.h  PSpawner.cpp  PSpawner.h  Pumpkin.cpp  (+15 more)
Extras/: Arc.cpp  Arc.h  CMakeLists.txt  Circle.cpp  Circle.h  Line.cpp  Line.h  ReaderClass.cpp  ReaderClass.h  achievements.cpp  achievements.h  extraConfig.cmake.in  utilities.cpp  utilities.h
First/: First.sln
First/Debug/: First.ilk
First/First/: Actor.cpp  Actor.h  CMakeLists.txt  Codes.h  Collectable.cpp  Collectable.h  ColorBoss.cpp  Death.cpp  Death.h  DeathArea.cpp  DeathArea.h  Enemy.cpp  Enemy.h  First.cpp  First.vcxproj  First.vcxproj.filters  Hint.cpp  Hint.h  Level.cpp  Level.h  Level1.cpp  Level1.h  Levels.h  Mover.cpp  Mover.h  Platform.cpp  Platform.h  Save.cpp  Save.h  Switch.cpp  Switch.h  You.cpp  You.h  config.sh  cp_utilities.h  stdafx.cpp  stdafx.h  targetver.h  utilities.cpp  utilities.h
First/First/Debug/: CL.read.1.tlog  CL.write.1.tlog  First.lastbuildstate  First.pch  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  vc100.idb
First/First/Release/: CL.read.1.tlog  CL.write.1.tlog  First.lastbuildstate  First.pch  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  mt.write.1.tlog
First/ipch/first-901b9190/: first-46c0b98e.ipch  first-b285e414.ipch
Graphics/: CMakeLists.txt  ColorRemove.cpp  ColorRemove.h  ExtraBoard.cpp  ExtraBoard.h  SaveGraphic.cpp  SaveGraphic.h
Levels/: Boss1.cpp  Boss1.h  Boss2.cpp  Boss2.h  Boss3_1.cpp  Boss3_1.h  Boss3_2.cpp  Boss3_2.h  Boss_cat.cpp  Boss_cat.h  CMakeLists.txt  Level1.cpp  Level1.h  Level10.cpp  Level10.h  Level11.cpp  Level11.h  Level12.cpp  Level12.h  Level13.cpp  Level13.h  Level14.cpp  Level14.h  Level15.cpp  Level15.h  Level16.cpp  Level16.h  Level2.cpp  Level2.h  Level3.cpp  Level3.h  Level4.cpp  Level4.h  Level5.cpp  Level5.h  Level6.cpp  Level6.h  Level7.cpp  Level7.h  Level8.cpp  (+6 more)
Menus/: CMakeLists.txt  FileMenu.cpp  FileMenu.h  FileMenu2.cpp  FileMenu2.h  PauseMenu.cpp  PauseMenu.h  StartMenu.cpp  StartMenu.h
Music/: CMakeLists.txt
Story/: Part2.txt  Part3.txt  PartI.txt
Switables/: AntiGravity.cpp  AntiGravity.h  CMakeLists.txt  Coin.cpp  Coin.h  Collectable.cpp  Collectable.h  Crystal.cpp  Crystal.h  Extra.cpp  Extra.h  FollowerFactory.cpp  FollowerFactory.h  Hint.cpp  Hint.h  Portal.cpp  Portal.h  RedSwitch.cpp  RedSwitch.h  Save.cpp  Save.h  Secret.h  Secret1.cpp  Switch.cpp  Switch.h
Testing_Notes/: Notes_0.1.5.txt  Notes_0.2.5.txt  Notes_0.3.txt  Part_I.txt
