include_directories(..)

add_library(graphics SaveGraphic.cpp)
MESSAGE(${CMAKE_BINARY_DIR})
MESSAGE(GFD HELLO)
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/fairy1.png DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/pumpkin1.png DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/pumpkin2.png DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
